<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:layout_alignParentTop="true"

    tools:context="com.amargodigits.vklimova.chuchundra.InDressActivity"
    tools:showIn="@layout/activity_in_dress"
    >

    <!-- ProgressBar

        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/inDressprogressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/ -->

    <ImageView
        android:contentDescription="@string/dog_no_dress"
        android:id="@+id/imgDogNoDress"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bokser"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imgDogInDress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/dog_in_dress"
        android:src="@drawable/amstaf_azzurro"
        android:visibility="invisible" />

    <Button
        android:id="@+id/BuyBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/buy"
        android:visibility="visible"
        android:padding="0dp"
        />
</RelativeLayout>
