<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.amargodigits.vklimova.chuchundra.SelectDogDress"
    tools:showIn="@layout/activity_select_dog_dress">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="10">

        <TextView
            android:id="@+id/textViewDog"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="top|start"
            android:layout_row="1"
            android:text="@string/choose_dog" />

        <ImageButton
            android:id="@+id/iBtnDog1"
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_column="0"
            android:layout_row="2"
            android:clickable="true"
            android:contentDescription="@string/someimage"
            android:onClick="onDogClick"
            android:src="@drawable/bokser" />

        <ImageButton
            android:id="@+id/iBtnDog2"
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_column="1"
            android:layout_row="2"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/someimage"
            android:onClick="onDogClick"
            android:src="@drawable/cannan" />

        <ImageButton
            android:id="@+id/iBtnDog3"
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_column="2"
            android:layout_row="2"
            android:clickable="true"
            android:contentDescription="@string/someimage"
            android:onClick="onDogClick"
            android:src="@drawable/amstaf" />

        <TextView
            android:id="@+id/textViewDress"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="top|start"
            android:layout_row="3"

            android:text="@string/choose_dress" />

        <ImageButton
            android:id="@+id/iBtnDress1"
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_column="0"
            android:layout_row="4"

            android:clickable="true"
            android:contentDescription="@string/someimage"
            android:onClick="onDressClick"
            android:src="@drawable/dress1" />

        <ImageButton
            android:id="@+id/iBtnDress2"
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_column="1"

            android:layout_row="4"

            android:clickable="true"
            android:contentDescription="@string/someimage"
            android:onClick="onDressClick"
            android:src="@drawable/dress2" />

        <ImageButton
            android:id="@+id/iBtnDress3"
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_column="2"

            android:layout_row="4"

            android:alpha="1"
            android:clickable="true"
            android:contentDescription="@string/someimage"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="onDressClick"
            android:src="@drawable/dress3"
            android:visibility="visible" />

        <Button
            android:id="@+id/Try"
            android:layout_width="182dp"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_row="6"
            android:onClick="onTryClick"
            android:text="@string/tryit" />



    </GridLayout>


</RelativeLayout>
